--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">விநாயகர் புராணம்</string>
+    <string name="left">\u003c\u003c\u003c</string>
+
 </resources>
